--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>ROCK PAPER SCISSORS: CONSOLE VERSION</h1>
-    <P>OPEN THE CONSOLE AND TYPE play(); TO START</P>
+    <P>OPEN THE CONSOLE AND TYPE playGame(); TO START</P>
     
 
   <script src="app.js"></script>
